# ftx

./: .gitignore  CMakeLists.txt  compile_commands.json  update_compile_command.sh
src/app/: CMakeLists.txt  chase_and_make_app.cpp  chase_and_make_hedge_app.cpp
src/chase_and_make/: CMakeLists.txt  chase_and_make.cpp  chase_and_make.hpp
src/example/: CMakeLists.txt  chase_and_make_test.cpp  ws_test.cc
src/module/: CMakeLists.txt
src/module/chase_and_make/: chase_and_make.cpp  chase_and_make.hpp
src/rest/: client.cc  client.h
src/util/: CMakeLists.txt  Encoding.cc  Encoding.h  HTTP.cc  WS.cc  WS.h  argparser.cpp  argparser.hpp  env.cc  env.h  ftx.cpp  ftx.hpp  json.cpp  json.hpp  ordered_pool.hpp
src/ws/: client.cc  client.h
